name:                rps-haskell
version:             0.1.0.0
synopsis:            Rock, paper, scissors game in Haskell.
homepage:            https://github.com/matkarlg/rps-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Mathias Karlgren
copyright:           Copyright: (c) 2014 Mathias Karlgren
category:            Game
build-type:          Simple
cabal-version:       >=1.18
tested-with:         GHC==8.0.1
homepage:            https://github.com/matkarlg/rps-haskell
bug-reports:         https://github.com/matkarlg/rps-haskell/issues
extra-source-files:  README.md

source-repository head
  type:     git
  location: git://github.com/matkarlg/rps-haskell.git

executable rps-haskell
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       monad-loops,
                       random

  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
